# comfyui-native-editor

./: Cargo.toml  NATIVE_DECODER_SETUP.md  PHASE2_SUMMARY.md  README.md  VIDEOTOOLBOX_IMPLEMENTATION.md  VIDEOTOOLBOX_IMPLEMENTATION_SUMMARY.md
apps/desktop/: Cargo.toml
apps/desktop/src/: app.rs  audio.rs  audio_decode.rs  audio_engine.rs  clock.rs  interaction.rs  main.rs
apps/desktop/src/decode/: manager.rs  mod.rs  worker.rs
apps/desktop/src/jobs/: ui.rs
apps/desktop/src/preview/: mod.rs  state.rs  ui.rs
apps/desktop/src/timeline/: ui.rs
crates/cli/src/: main.rs
crates/exporters/src/: edl.rs  fcp7xml.rs  fcpxml.rs  lib.rs
crates/jobs/: Cargo.toml
crates/jobs/src/: lib.rs
crates/media-io/src/: lib.rs  yuv_decode.rs
crates/native-decoder/: Cargo.toml  build.rs
crates/native-decoder/examples/: test_videotoolbox.rs
crates/native-decoder/src/: avfoundation_shim.h  avfoundation_shim.m  fallback.rs  lib.rs  macos.rs  wgpu_integration.rs
crates/plugin-host/src/: lib.rs  marketplace.rs  python_bridge.rs  wasm_runtime.rs
crates/project/src/: lib.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: lib.rs
crates/timeline/: Cargo.toml
crates/timeline/src/: commands.rs  graph.rs  lib.rs
docs/: interop.md
gausian.ai.backend/: .dockerignore  ID_REFERENCE_GUIDE.md  cookies.txt  docker-compose.yml  dockerignore  gen.json  package-lock.json  submit.json  test_login.js
gausian.ai.backend/api/: .dockerignore  .modal.toml  Dockerfile  db.js  ensure-modal-token.sh  fix_existing_prompts.js  modal_app.py  package-lock.json  package.json  server.js
gausian.ai.backend/api/comfy-modal/: headless_comfyui.py
gausian.ai.backend/api/lib/: modalManager.js  regenMap.js
gausian.ai.backend/api/middleware/: auth.js
gausian.ai.backend/api/routes/: auth.js  debug.js  export.js  generation.js  media.js  projects.js  timeline.js  videoReferences.js
gausian.ai.backend/api/services/: gemini.js  importWatcher.js  jobWatcher.js  mediaMonitor.js  modal.js  modalClient.js  s3.js  (+2 more)
gausian.ai.backend/db/: init.sql
gausian.ai.backend/formats/: prompt_format.json
gausian.ai.backend/helpers/: comfyPayload.js
gausian.ai.backend/routes/: auth.js  export.js  media.js  project.js  video.js
gausian.ai.backend/scripts/: migrate-remote-media.js
gausian.ai.frontend/: package-lock.json
gausian.ai.frontend/comfy-modal/: headless_comfyui.py  headless_comfyui_gpt.py  image.py  wan22_t2v_flexible.json
gausian.ai.frontend/film-mvp/: ENHANCED_PIPELINE_README.md  FFMPEG_INTEGRATION_README.md  README.md  SCREENPLAY_GENERATION.md  SHOTSTACK_INTEGRATION_README.md  SHOTSTACK_README.md  TIMELINE_EDITOR_README.md  add_project_to_opencut.js  concatenate_videos.py  copy_project_to_opencut.py  create_complete_injection_html.py  create_film.py  create_injection_html.py  enhanced_screenplay_generator.py  generate_screenplay.py  inject_project.html  open_opencut_with_videos.py  plot_types.json  requirements.txt  run_enhanced_pipeline.py  shotstack_integration.py  shotstack_simple.py  test_opencut_api.py  timeline_editor.py  upload_to_opencut.py  upload_to_opencut_automated.py  upload_to_opencut_integrated.py  wan22_enhanced_pipeline.py
gausian.ai.frontend/react-app/: DEPLOYMENT.md  api_client.py  auth.js  check_projects.py  cleanup_duplicates.py  current_project.py  database.js  import_opencut_videos.py  layout_sequential_project.py  layout_timeline.py  modal-config.js  package-lock.json  package.json  quick_layout.py  server-ffmpeg.js  server.js  simple-auth.js  tsconfig.app.json
(+100 files in other folders)
