[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
pollster = "0.4"
winit = { version = "0.30" }
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = ["wgpu"] }
egui_extras = { version = "0.29", features = ["default"] }
rfd = "0.15"
uuid = { version = "1", features = ["v4"] }
image = "0.25"
cpal = "0.15"
crossbeam-channel = "0.5"
wgpu = "0.20"
project = { path = "../../crates/project" }
timeline = { path = "../../crates/timeline" }
renderer = { path = "../../crates/renderer" }
exporters = { path = "../../crates/exporters" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
media-io = { path = "../../crates/media-io" }
pathdiff = "0.2"
jobs = { path = "../../crates/jobs" }
native-decoder = { path = "../../crates/native-decoder" }

[features]
unsafe-interop = []
