[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
pollster = "0.4"
winit = { version = "0.30" }
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = ["wgpu"] }
egui_extras = { version = "0.29", features = ["default"] }
rfd = "0.15"
uuid = { version = "1", features = ["v4"] }
image = "0.25"
crossbeam-channel = "0.5"
crossbeam = "0.8"
wgpu = "0.20"
bytemuck = { version = "1", features = ["derive"] }
project = { path = "../../crates/project" }
timeline = { path = "../../crates/timeline" }
renderer = { path = "../../crates/renderer" }
exporters = { path = "../../crates/exporters" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
media-io = { path = "../../crates/media-io" }
pathdiff = "0.2"
jobs = { path = "../../crates/jobs" }
native-decoder = { path = "../../crates/native-decoder" }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing = "0.1"
symphonia = { version = "0.5", features = ["aac", "flac", "vorbis", "mp3", "wav"] }

[features]
unsafe-interop = []

# If you use cpal or rodio, make them mac-first via target sections.
# It's OK if only one of these appears in your repo; keep both sections—Cargo ignores unused ones.

[target.'cfg(target_os = "macos")'.dependencies]
# Use CoreAudio on macOS (cpal selects correct backend automatically)
cpal = { version = "0.15" }
rodio = { version = "0.17" }

[target.'cfg(target_os = "linux")'.dependencies]
# Keep ALSA available on Linux (cpal selects correct backend automatically)
cpal = { version = "0.15" }
rodio = { version = "0.17" }
