[package]
name = "native-decoder"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os = "macos")'.dependencies]
# Core Foundation and VideoToolbox bindings
core-foundation = "0.9"
core-video = "0.2"
core-media = "0.5"
av-foundation = "0.5"
objc = "0.2"
objc-foundation = "0.1"
objc_id = "0.1"
io-surface = "0.15"


# Async runtime
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Logging
tracing = "0.1"

[target.'cfg(not(target_os = "macos"))'.dependencies]
# Fallback dependencies for non-macOS platforms
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

[dependencies]
# Common dependencies
wgpu = "0.20"

[build-dependencies]
cc = "1.0"
